# nestmodel

./: .coveragerc  .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  SBM.ipynb  pyproject.toml  setup.py
.github/workflows/: ci.yaml  pythonapp.yml  release_to_pypi.yml
demo/: Demo__Intro_To_WL_and_NeSt.ipynb  Quotient graphs.ipynb  Visualize Flips of the Markov chain.ipynb
nestmodel/: ERGM_experiments.py  centralities.py  colorings.py  dict_graph.py  ergm.py  fast_graph.py  fast_rewire.py  fast_rewire2.py  fast_wl.py  io.py  load_datasets.py  long_refinement_graphs.py  mutual_independent_models.py  unified_functions.py  utils.py  visualization.py  wl.py  wl_nlogn.py
nestmodel/tests/: test_centralities.py  test_colorings.py  test_fast_graph.py  test_fast_rewire.py  test_fast_wl.py  test_graph_properties.py  test_pagerank.py  test_unified_functions.py  test_utils.py  testing.py  utils_for_test.py
scripts/: Baselines.ipynb  Baselines_plot.ipynb  clean_errors.py  convergence2_eigenvector.ipynb  convergence2_example.ipynb  convergence2_hits.ipynb  convergence2_jaccard.ipynb  convergence2_katz.ipynb  convergence2_pagerank.ipynb  convergence2_plot.ipynb  convergence2_runner.py  convergence_helper.py  copy_files.py  find long refinement graphs.ipynb  get_datasets.py  long refinement graphs.ipynb
src/nestmodel/: ERGM_experiments.py  centralities.py  colorings.py  dict_graph.py  ergm.py  fast_graph.py  fast_rewire.py  fast_rewire2.py  fast_wl.py  graph_properties.py  io.py  load_datasets.py  long_refinement_graphs.py  mutual_independent_models.py  testing.py  unified_functions.py  utils.py  utils_for_test.py  visualization.py  wl.py  wl_nlogn.py
tests/: test_centralities.py  test_colorings.py  test_fast_graph.py  test_fast_rewire.py  test_fast_wl.py  test_graph_properties.py  test_pagerank.py  test_unified_functions.py  test_utils.py
